--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="zkSync: simple, fast and secure token transfers"
+      content="zkSync: simple, fast and secure value transfers"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
