--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,15 @@
       rel="stylesheet"
     />
     <title>zkSync</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178057628-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-178057628-1');
+    </script>
   </head>
   <body id="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
