feat: applied eslint rules, formatted the code according to it

--- a/src/app.html
+++ b/src/app.html
@@ -7,13 +7,11 @@
     {{ APP }}
     <script>
       try {
-        navigator.serviceWorker
-          .getRegistrations()
-          .then(function (registrations) {
-            for (const registration of registrations) {
-              registration.unregister();
-            }
-          })
+        navigator.serviceWorker.getRegistrations().then(function (registrations) {
+          for (const registration of registrations) {
+            registration.unregister()
+          }
+        })
       } catch (e) {
         console.error(e);
       }
