--- a/src/app.html
+++ b/src/app.html
@@ -9,9 +9,9 @@
       try {
         navigator.serviceWorker.getRegistrations().then(function (registrations) {
           for (const registration of registrations) {
-            registration.unregister()
+            registration.unregister();
           }
-        })
+        });
       } catch (e) {
         console.error(e);
       }
